fixed course container alignemnt

--- a/src/containers/CourseContainer/CourseContainer.css
+++ b/src/containers/CourseContainer/CourseContainer.css
@@ -1,4 +1,12 @@
 .CourseContainer {
   margin: 3% 20% 2% 20%;
-text-align: left;
+  text-align: left;
+}
+
+.CourseContainer .short-desc-container {
+  overflow: hidden;
+  line-height: 1;
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;  
 }
